--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,19 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  background-color: #c9c8bb;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:hover {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transform: scale(1);
+}
+
+button:active {
+  transform: scale(1.2);
 }
